assets/themes/bootstrap-3/css/style.css
/* Custom container */

/* Replaced with normal container and standard footer */
/*.container-narrow {
  margin: 0 auto;
  max-width: 700px; }

.container-narrow > hr {
  margin: 30px 0; }
*/

/* Replaced with standard BS3 Navbar */
/*.navbar .nav {
  float: right; }*/

/* Jekyll Bootstrap Colors */
h1, h2, h3, h4 {
  color: #f22430;
}

.container {
  max-width:900px;
}

/* img styling */
.content img {
vertical-align: middle;
text-align: center;
margin-left: auto;
margin-right: auto;
display: block;
border: solid 1px #aaa;
padding: 2px;
max-width: 100%;
}


/* posts index */
.post > h3.title {
  position: relative;
  padding-top: 10px; }

.post > h3.title span.date {
  position: absolute;
  right: 0;
  font-size: 0.9em; }

.post > .more {
  margin: 10px 0;
  text-align: left; }

/* post-full*/
.post-full .date {
  margin-bottom: 20px;
  font-weight: bold; }

/* tag_box */
.tag_box {
  list-style: none;
  margin: 0;
  overflow: hidden; }

.tag_box li {
  line-height: 28px; }

.tag_box li:first-child {
    margin-right:5px
}

.tag_box li i {
  opacity: 1; }

.tag_box.inline li {
  float: left; }

.tag_box a {
  padding: 3px 6px;
  margin: 2px;
  background: #eee;
  color: #555;
  border-radius: 3px;
  text-decoration: none;
  border: 1px dashed #cccccc; }

.tag_box a span {
  vertical-align: super;
  font-size: 0.8em; }

.tag_box a:hover {
  background-color: #e5e5e5; }

.tag_box a.active {
  background: #57A957;
  border: 1px solid #4c964d;
  color: #FFF; }

table.highlighttable {
  overflow-x:auto;
  display:block;
  margin-bottom:20px;
}

table.highlighttable td.code {
  width:100%;
}

pre {
  border: none;
}

pre code {
  white-space: pre;
}

p > code {
  display: inline-block;
  background: #f8f8f8;
  line-height: 1.42em;
  color: #c7254e;
  border: 1px solid #ddd;
  -webkit-border-radius: 0.4em;
  -moz-border-radius: 0.4em;
  -ms-border-radius: 0.4em;
  -o-border-radius: 0.4em;
  border-radius: 3px;
  padding: 0 3px;
  margin: 0px 1px 0px 1px;
}

.highlighttable pre {
  margin:0px;
  border: none;
}

.highlighttable .linenos pre {
  color: #4a4a40;
  background: #e7e7e1;
  border-radius: 10px 0px 0px 10px;
}

.highlighttable .code pre {
  border-radius: 0px 10px 10px 0px;
}

aside {
  color: #666;
  font-style:italic;
  min-height: 20px;
  padding: 9px;
  margin-bottom: 20px;
  background-color: #f5f5f5;
  border: 1px solid #e3e3e3;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
}

#wrap {
  display:flex;
  flex-direction:column;
  margin: 0;
  padding:0;
}

#wrap > .container {
  flex-grow:1;
}

#wrap > nav.footer {
  background-color: #fdcd60;
  border: solid #BB902E;
  border-width: 1px 0 0;
  margin-top:10px;
}

#wrap > nav.footer > div > p {
  margin: 5px 0;
}

